# episode-api

./: .dockerignore  .env_example  .gitignore  README.md  REQUIREMENT.md  SETUP.md  docker-compose.yaml  pyproject.toml
docs/: LOCALSETUP.md
src/: config.py  dependency.py  main.py
src/api/: api.py  interactor.py
src/app/: interactor.py
src/domain/: episode.py
src/infra/: db.py  models.py  storage.py
src/storage/: storage.py
tests/api/: conftest.py  helpers.py  test_api_interactor.py
tests/app/: conftest.py  test_interactor.py
tests/storage/: conftest.py  helper.py  helpers.py  test_storage.py
