[tool.poetry]
name = "episode-api"
version = "0.1.0"
description = "Example Python API - inspired by Clean Architecture"
authors = ["Yunjae Oh <yunjae.oh.nl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
# Should be the same as `$POETRY_VERSION`
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
